--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
         <header>
             <h1>Novo Título</h1>
+            <img src="imagens/GGD.png" alt="GGD">
         </header>
         <article>
             <h2>Apenas Teste</h2>
@@ -18,6 +19,7 @@
         <article>
             <h2>Outro Teste</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis exercitationem laboriosam, debitis architecto illum delectus quaerat asperiores eos assumenda molestias quam atque blanditiis quibusdam velit fugiat. Unde repellat dolor nostrum.</p>
+            <p><a href="click.html">Clique aqui</a></p>
         </article>
     </main>
 </body>
